# MediScanAI---virtualHospital

./: .gitignore  README.md  ai_models.py  doctor.py  env.example  main.py  medical_models.py  package-lock.json  pyproject.toml  requirements.txt
MODELS/Alzeimer/: alzheimer.ipynb  model_evaluvation.ipynb
MODELS/Brain/: main.ipynb  mri_analysis.ipynb
MODELS/chest/: chest.ipynb  model_evaluvation.ipynb
src/: alzheimer-detector.html  brain-mri.html  chest-ct.html  dashboard.html  output.css
